--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,12 +3,11 @@
   width: 80vw;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  column-gap: 20px;
+  row-gap: 30px;
 }
 @media only screen and (max-width: 768px) {
   .topics-container {
-    /* width: 80vw; */
-
     grid-template-columns: repeat(1, 1fr);
   }
 }
