--- a/src/components/QuizItem/QuizItem.css
+++ b/src/components/QuizItem/QuizItem.css
@@ -1,15 +1,16 @@
 .quiz {
   text-align: left;
-  border: 2px solid green;
+  /* border: 2px solid salmon; */
   border-radius: 10px;
   max-width: 50vw;
   margin: 30px auto;
   padding: 20px;
+  box-shadow: 0 0 1px 0 gray;
 }
 .quiz-title {
   font-weight: 500;
   width: 80%;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .options-container {
   display: grid;
