--- a/src/components/QuizItem/QuizItem.css
+++ b/src/components/QuizItem/QuizItem.css
@@ -1,11 +1,11 @@
 .quiz {
   text-align: left;
-  /* border: 2px solid salmon; */
   border-radius: 10px;
   max-width: 50vw;
   margin: 30px auto;
   padding: 20px;
   box-shadow: 0 0 1px 0 gray;
+  position: relative;
 }
 .quiz-title {
   font-weight: 500;
@@ -16,4 +16,14 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
+}
+.eye-icon {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+.eye-icon:hover {
+  cursor: pointer;
 }
